--- a/AD/Client/wwwroot/index.html
+++ b/AD/Client/wwwroot/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
     <title>AD</title>
     <base href="/" />
+    <link href="_content/BootstrapBlazor.BootstrapIcon/css/bootstrap.min.css" rel="stylesheet">
     <link href="css/bootstrap/bootstrap.min.css" rel="stylesheet" />
     <link href="css/app.css" rel="stylesheet" />
     <link href="AD.Client.styles.css" rel="stylesheet" />
@@ -24,7 +25,7 @@
     </div>
     <script src="_framework/blazor.webassembly.js"></script>
     <script>navigator.serviceWorker.register('service-worker.js');</script>
-    <script src="js/scriptsInOne.js" type="module"></script>
+    <script src="js/main.js" type="module"></script>
     <script src="js/sidebarDrag.js" type="module"></script>
     <script src="js/themeToggle.js" type="module"></script>
 </body>
